--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "fnm": "^0.0.0",
+    "jquery": "^3.7.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
